--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "grider",
-    "description": "REST uploader for MongoDB's GridFS",
-    "version": "1.0.3",
-    "author": {
-        "name": "Alex Movsisyan",
-        "email": "node@movsisyan.com"
-    },
-    "homepage": "https://github.com/konteck/node-grider",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/konteck/node-grider.git"
-    },
-    "bin": {
-        "grider": "./bin/grider"
-    },
-    "keywords": [
-        "mongodb",
-        "gridfs",
-        "files",
-        "rest"
-    ],
-    "main": "./lib/grider.js",
-    "dependencies": {
-        "restify": "~2.6.1",
-        "optimist": "~0.6.1",
-        "gridfs-stream": "~0.4.1",
-        "mongodb": "~1.3.23"
-    }
+  "name": "grider",
+  "description": "REST uploader for MongoDB's GridFS",
+  "version": "1.0.3",
+  "author": {
+    "name": "Alex Movsisyan",
+    "email": "node@movsisyan.com"
+  },
+  "homepage": "https://github.com/konteck/node-grider",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/konteck/node-grider.git"
+  },
+  "bin": {
+    "grider": "./bin/grider"
+  },
+  "keywords": [
+    "mongodb",
+    "gridfs",
+    "files",
+    "cloud",
+    "api",
+    "rest"
+  ],
+  "main": "./lib/grider.js",
+  "dependencies": {
+    "gridfs-stream": "^1.1.1",
+    "mime": "^1.3.4",
+    "mongodb": "^2.2.8",
+    "optimist": "^0.6.1",
+    "restify": "^4.1.1"
+  }
 }
